Updated styles to fix alignment issues

--- a/frontend/src/styles/elements/_cards.scss
+++ b/frontend/src/styles/elements/_cards.scss
@@ -66,13 +66,34 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 0.5em 2em;
+      padding: 0.5em 1em;
 
       &-top {
         display: flex;
-        align-items: center;
-        justify-content: space-between;
         width: 100%;
+
+        .card-element__heading {
+          flex: 4;
+
+          .string-parameter {
+            .label {
+              flex: 1;
+              text-align: left;
+              padding-right: 1em;
+            }
+
+            .input {
+              flex: 6;
+              padding: 0 0.75em;
+            }
+          }
+        }
+
+        .card-element__buttons {
+          flex: 1;
+          text-align: right;
+          margin-top: 10px;
+        }
 
         &.collapsed {
           margin-top: 10px;
